# meta-parser

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
3rd/: CMakeLists.txt
3rd/LLVM-21.1.6/cmake/: LLVMConfig.cmake
3rd/LLVM/cmake/: LLVMConfig.cmake
3rd/argparse-3.2/: CMakeLists.txt
3rd/mustache/cmake/: mustacheConfig.cmake
cmake/: MetaParser.cmake  config.cmake  utility.cmake
sandbox/: CMakeLists.txt  main.cpp
sandbox/precompile/: precompile.json.in
sandbox/runtime/: person.hpp
sandbox/runtime/meta/: argwrap.hpp  json.h  reflection.cpp  reflection.hpp  reflection_register.cpp  reflection_register.h  serializer.cpp  serializer.h  serializer.hpp  serializer_register.cpp  serializer_register.h
sandbox/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache  reflection.all.mustache  reflection.gen.cpp.mustache  reflection.gen.mustache  serializer.all.h.mustache  serializer.all.ipp.mustache  serializer.gen.h.mustache  serializer.gen.mustache
src/: CMakeLists.txt
src/parser/: main.cpp
src/parser/common/: global_config.h
src/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
src/parser/language_types/: class.cpp  class.h  field.cpp  field.h
src/parser/meta/: meta_info.cpp  meta_utils.cpp  meta_utils.h
src/parser/parser/: options.h  parser.cpp  parser.h
src/parser/template_manager/: template_manager.cpp  template_manager.h
